modules/client-vpn/subnet.tf
resource "aws_subnet" "vpn-1a" {
  count                   = "${var.vpn-1a_create}"
  vpc_id                  = "${var.vpc_id}"
  cidr_block              = "${var.vpn-1a_subnet_cidr}"
  map_public_ip_on_launch = false
  availability_zone       = "us-east-1a"
  tags {
    Name                  = "vpn-1a"
    Description           = "VPN Subnet us-east-1a"
    Terraform             = "true"
  }
}

resource "aws_route_table" "vpn-1a" {
  count                   = "${var.vpn-1a_create}"
  vpc_id                  = "${var.vpc_id}"
  route {
    cidr_block            = "0.0.0.0/0"
    gateway_id            = "${var.internet-gateway}"
  }
  tags {
    Name                  = "vpn-1a Subnet"
    Description           = "VPN Subnet us-east-1a"
    Terraform             = "true"
  }
}

resource "aws_route_table_association" "vpn-1a-rta" {
  count                   = "${var.vpn-1a_create}"
  subnet_id               = "${aws_subnet.vpn-1a.id}"
  route_table_id          = "${aws_route_table.vpn-1a.id}"
}
